adding .gitignore file

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
         </div>
         <div class="service">
             <p class="servicep">Our Services</p>
-            <div class="info">
+            <div class="info info2">
                 <div class="info-1">
                     <h3>Photography</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ex libero, hic ipsam vero voluptate fugiat sapiente ratione numquam incidunt doloribus, deleniti unde doloremque magnam! Quia corporis ab explicabo eius.</p>
